pyinfra-debug.log
  File "/Users/rajgouravj/opt/anaconda3/envs/datascience/lib/python3.8/site-packages/pyinfra_cli/main.py", line 218, in cli
    _main(*args, **kwargs)
  File "/Users/rajgouravj/opt/anaconda3/envs/datascience/lib/python3.8/site-packages/pyinfra_cli/main.py", line 435, in _main
    inventory, inventory_group = make_inventory(
  File "/Users/rajgouravj/opt/anaconda3/envs/datascience/lib/python3.8/site-packages/pyinfra_cli/inventory.py", line 109, in make_inventory
    groups = _get_groups_from_filename(inventory_filename)
  File "/Users/rajgouravj/opt/anaconda3/envs/datascience/lib/python3.8/site-packages/pyinfra_cli/inventory.py", line 71, in _get_groups_from_filename
    attrs = exec_file(inventory_filename, return_locals=True)
  File "/Users/rajgouravj/opt/anaconda3/envs/datascience/lib/python3.8/site-packages/pyinfra_cli/util.py", line 69, in exec_file
    code = compile(code, filename, 'exec')
  File "inventories/test_instance.py", line 1
    test_instance = @docker/test_instance
                    ^
SyntaxError: invalid syntax
